spade-tests/src/snapshots/spade_tests__typeinference__recursive_tuple_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
fn test() {
    decl x;
    let x = (x, true);
}


error: Inferred a recursive type (*, _)
  ┌─ testinput:3:9
  │
3 │     let x = (x, true);
  │         ^ Type (*, _) inferred here
  │
  = help: The recursion happens at the type marked "*"
